--- a/vectorization & reduce dimensions.ipynb
+++ b/vectorization & reduce dimensions.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "137c4f03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\brian\\miniconda3\\envs\\new_env1\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Vectorization\n",
-    "from fastapi import FastAPI\n",
-    "from pydantic import BaseModel\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "import numpy as np\n",
     "\n",
     "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
     "\n",
@@ -25,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "26ec5ceb",
    "metadata": {},
    "outputs": [
@@ -136,6 +142,44 @@
    "source": [
     "print(\"Vector for Japan sentence:\")\n",
     "print(embeddings[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "851627e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\brian\\miniconda3\\envs\\new_env1\\lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\brian\\miniconda3\\envs\\new_env1\\lib\\site-packages\\umap\\umap_.py:1952: UserWarning: n_jobs value 1 overridden to 1 by setting random_state. Use no seed for parallelism.\n",
+      "  warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import umap.umap_ as umap\n",
+    "\n",
+    "#Reduce dimensions using umap (good for large dataset)\n",
+    "umap_model = umap.UMAP(n_components=2, random_state=42)\n",
+    "X_2d = umap_model.fit_transform(embeddings)\n",
+    "\n",
+    "#Ready to be improted to Tableau\n",
+    "X_2d.shape "
    ]
   }
  ],
