tags counts, tags encode, tags scatter plot, tags one hot encoding

--- a/src/3_preprocessing.ipynb
+++ b/src/3_preprocessing.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "%run  2_get_data.ipynb"
+    "%run  3_1_preprocessing_clearing.ipynb"
    ]
   }
  ],
