--- a/src/6_2_ML.ipynb
+++ b/src/6_2_ML.ipynb
@@ -1186,6 +1186,68 @@
    "source": [
     "combined_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 投資人分群（Clustering）\n",
+    "\n",
+    "目標：將投資人根據其投資偏好、地區、產業、投資階段等特徵自動分群，找出相似投資人群體。\n",
+    "\n",
+    "技術：K-Means、Hierarchical Clustering 等非監督式學習。\n",
+    "\n",
+    "實務應用：協助新創公司精準鎖定潛在投資人群。\n",
+    "\n",
+    "2. 投資人推薦系統（Recommender System）\n",
+    "\n",
+    "目標：根據新創公司特徵（如產業、地區、發展階段），推薦最適合的投資人或機構。\n",
+    "\n",
+    "技術：內容型推薦（Content-based）、協同過濾（Collaborative Filtering）。\n",
+    "\n",
+    "實務應用：自動媒合新創與投資人，提升媒合效率。\n",
+    "\n",
+    "3. 投資人特徵預測（Classification/Prediction）\n",
+    "\n",
+    "目標：預測某投資人最有可能投資的產業或地區。\n",
+    "\n",
+    "技術：決策樹、隨機森林、XGBoost、Logistic Regression 等監督式分類模型。\n",
+    "\n",
+    "實務應用：協助投資顧問或媒合平台進行智能預測與市場分析。\n",
+    "\n",
+    "4. 關鍵字/文本分析（NLP）\n",
+    "\n",
+    "目標：分析 Description 欄位，萃取投資人關注重點、熱門關鍵字。\n",
+    "\n",
+    "技術：TF-IDF、關鍵字雲、主題建模（如 LDA）。\n",
+    "\n",
+    "實務應用：快速掌握投資人偏好與市場趨勢。\n",
+    "\n",
+    "5. 社群網絡分析（Network Analysis）\n",
+    "\n",
+    "目標：若有投資人之間的合作或共同投資資料，可建立投資人網絡，分析重要節點與關鍵連結。\n",
+    "\n",
+    "技術：NetworkX、圖論分析。\n",
+    "\n",
+    "實務應用：找出影響力大的投資人或機構。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://x.com/i/grok/share/wGqCJ9NzAHW9kEiiKPLrTknCu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BERT"
+   ]
   }
  ],
  "metadata": {
