--- a/src/0_install_package.ipynb
+++ b/src/0_install_package.ipynb
@@ -3,14 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%run  3_1_preprocessing_clearing.ipynb"
+    "!pip install nbformat\n",
+    "!pip install sklearn\n",
+    "!pip install plotly\n",
+    "!pip install umap.umap_\n",
+    "!pip install sentence_transformers\n",
+    "!pip install umap-learn"
    ]
   }
  ],
