Update_working on same investor input duplication

--- a/read_parquet_files (1).ipynb
+++ b/read_parquet_files (1).ipynb
@@ -465,14 +465,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6da10267",
-   "metadata": {},
-   "source": [
-    "The variable \"combined_df\" here is updated with all duplicates removed."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "60b99a87",
@@ -789,6 +781,329 @@
    "source": [
     "combined_df.drop(index = duplicates_index_number.index, inplace=True)  # Drop duplicates\n",
     "combined_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1570e39b",
+   "metadata": {},
+   "source": [
+    "Check duplication for same investor inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5da83c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Investors</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Preferred Industry</th>\n",
+       "      <th>Preferred Investment Type</th>\n",
+       "      <th>Primary Investor Type</th>\n",
+       "      <th>geography_tags</th>\n",
+       "      <th>preferred_investment_type_tags</th>\n",
+       "      <th>preferred_industry_tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>59129</th>\n",
+       "      <td>&amp;amp</td>\n",
+       "      <td>www.andbeyond.es</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Merger/Acquisition</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[0]</td>\n",
+       "      <td>[0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59130</th>\n",
+       "      <td>&amp;amp</td>\n",
+       "      <td>www.andlarry.com</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Merger/Acquisition</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[0]</td>\n",
+       "      <td>[0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148597</th>\n",
+       "      <td>37 Angels</td>\n",
+       "      <td>Founded in 212, 37 Angels is an angel network ...</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Business Products and Services (B2B), Consumer...</td>\n",
+       "      <td>Angel (individual), Early Stage VC, Seed Round</td>\n",
+       "      <td>Angel Group</td>\n",
+       "      <td>[united states]</td>\n",
+       "      <td>[angel (individual), early stage vc, seed round]</td>\n",
+       "      <td>[business products and services (b2b), consume...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71793</th>\n",
+       "      <td>37 Angels</td>\n",
+       "      <td>community of women angel investors that offers...</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>venture capital and private equity principals</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[united states]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[venture capital and private equity principals]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149730</th>\n",
+       "      <td>A&amp;amp</td>\n",
+       "      <td>www.aenetworks.com</td>\n",
+       "      <td>Provider of television broadcasting services i...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Media, Software</td>\n",
+       "      <td>Merger/Acquisition</td>\n",
+       "      <td>[provider of television broadcasting services ...</td>\n",
+       "      <td>[media, software]</td>\n",
+       "      <td>[0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27960</th>\n",
+       "      <td>être Venture Capital</td>\n",
+       "      <td>Founded in 222, être Venture Capital is a vent...</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Early Stage VC, Seed Round</td>\n",
+       "      <td>&lt;span&gt;0.01 - 5.00&lt;/span&gt;</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[early stage vc, seed round]</td>\n",
+       "      <td>[0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66354</th>\n",
+       "      <td>İnci Holding</td>\n",
+       "      <td>Manufacturer of battery production and sales i...</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Merger/Acquisition</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[merger/acquisition]</td>\n",
+       "      <td>[0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100533</th>\n",
+       "      <td>İnci Holding</td>\n",
+       "      <td>Manufacturer of battery production and sales i...</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Merger/Acquisition</td>\n",
+       "      <td>Holding Company</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[merger/acquisition]</td>\n",
+       "      <td>[0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>674</th>\n",
+       "      <td>İş Enerji</td>\n",
+       "      <td>Opearator of energy company intended to create...</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Merger/Acquisition</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[merger/acquisition]</td>\n",
+       "      <td>[0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101021</th>\n",
+       "      <td>İş Enerji</td>\n",
+       "      <td>Opearator of energy company intended to create...</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Merger/Acquisition</td>\n",
+       "      <td>Corporation</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[merger/acquisition]</td>\n",
+       "      <td>[0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32060 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Investors  \\\n",
+       "59129                   &amp   \n",
+       "59130                   &amp   \n",
+       "148597             37 Angels   \n",
+       "71793              37 Angels   \n",
+       "149730                 A&amp   \n",
+       "...                      ...   \n",
+       "27960   être Venture Capital   \n",
+       "66354           İnci Holding   \n",
+       "100533          İnci Holding   \n",
+       "674                İş Enerji   \n",
+       "101021             İş Enerji   \n",
+       "\n",
+       "                                              Description  \\\n",
+       "59129                                    www.andbeyond.es   \n",
+       "59130                                    www.andlarry.com   \n",
+       "148597  Founded in 212, 37 Angels is an angel network ...   \n",
+       "71793   community of women angel investors that offers...   \n",
+       "149730                                 www.aenetworks.com   \n",
+       "...                                                   ...   \n",
+       "27960   Founded in 222, être Venture Capital is a vent...   \n",
+       "66354   Manufacturer of battery production and sales i...   \n",
+       "100533  Manufacturer of battery production and sales i...   \n",
+       "674     Opearator of energy company intended to create...   \n",
+       "101021  Opearator of energy company intended to create...   \n",
+       "\n",
+       "                                                Geography  \\\n",
+       "59129                                                       \n",
+       "59130                                                       \n",
+       "148597                                      United States   \n",
+       "71793                                       United States   \n",
+       "149730  Provider of television broadcasting services i...   \n",
+       "...                                                   ...   \n",
+       "27960                                                       \n",
+       "66354                                                       \n",
+       "100533                                                      \n",
+       "674                                                         \n",
+       "101021                                                      \n",
+       "\n",
+       "                                       Preferred Industry  \\\n",
+       "59129                                                   0   \n",
+       "59130                                                   0   \n",
+       "148597  Business Products and Services (B2B), Consumer...   \n",
+       "71793       venture capital and private equity principals   \n",
+       "149730                                                  0   \n",
+       "...                                                   ...   \n",
+       "27960                                                   0   \n",
+       "66354                                                   0   \n",
+       "100533                                                  0   \n",
+       "674                                                     0   \n",
+       "101021                                                  0   \n",
+       "\n",
+       "                             Preferred Investment Type  \\\n",
+       "59129                                                0   \n",
+       "59130                                                0   \n",
+       "148597  Angel (individual), Early Stage VC, Seed Round   \n",
+       "71793                                             None   \n",
+       "149730                                 Media, Software   \n",
+       "...                                                ...   \n",
+       "27960                       Early Stage VC, Seed Round   \n",
+       "66354                               Merger/Acquisition   \n",
+       "100533                              Merger/Acquisition   \n",
+       "674                                 Merger/Acquisition   \n",
+       "101021                              Merger/Acquisition   \n",
+       "\n",
+       "           Primary Investor Type  \\\n",
+       "59129         Merger/Acquisition   \n",
+       "59130         Merger/Acquisition   \n",
+       "148597               Angel Group   \n",
+       "71793                       None   \n",
+       "149730        Merger/Acquisition   \n",
+       "...                          ...   \n",
+       "27960   <span>0.01 - 5.00</span>   \n",
+       "66354                          0   \n",
+       "100533           Holding Company   \n",
+       "674                            0   \n",
+       "101021               Corporation   \n",
+       "\n",
+       "                                           geography_tags  \\\n",
+       "59129                                                  []   \n",
+       "59130                                                  []   \n",
+       "148597                                    [united states]   \n",
+       "71793                                     [united states]   \n",
+       "149730  [provider of television broadcasting services ...   \n",
+       "...                                                   ...   \n",
+       "27960                                                  []   \n",
+       "66354                                                  []   \n",
+       "100533                                                 []   \n",
+       "674                                                    []   \n",
+       "101021                                                 []   \n",
+       "\n",
+       "                          preferred_investment_type_tags  \\\n",
+       "59129                                                [0]   \n",
+       "59130                                                [0]   \n",
+       "148597  [angel (individual), early stage vc, seed round]   \n",
+       "71793                                                 []   \n",
+       "149730                                 [media, software]   \n",
+       "...                                                  ...   \n",
+       "27960                       [early stage vc, seed round]   \n",
+       "66354                               [merger/acquisition]   \n",
+       "100533                              [merger/acquisition]   \n",
+       "674                                 [merger/acquisition]   \n",
+       "101021                              [merger/acquisition]   \n",
+       "\n",
+       "                                  preferred_industry_tags  \n",
+       "59129                                                 [0]  \n",
+       "59130                                                 [0]  \n",
+       "148597  [business products and services (b2b), consume...  \n",
+       "71793     [venture capital and private equity principals]  \n",
+       "149730                                                [0]  \n",
+       "...                                                   ...  \n",
+       "27960                                                 [0]  \n",
+       "66354                                                 [0]  \n",
+       "100533                                                [0]  \n",
+       "674                                                   [0]  \n",
+       "101021                                                [0]  \n",
+       "\n",
+       "[32060 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_df[combined_df.duplicated(subset=['Investors'], keep=False)].sort_values(by='Investors')\n",
+    "combined_df.to_excel('duplicates_same investor.xlsx', index=False)  # Save to Excel file for manual inspection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6da10267",
+   "metadata": {},
+   "source": [
+    "The variable \"combined_df\" here is updated with all duplicates removed."
    ]
   },
   {
