Update_finish One Hot Encoding

--- a/read_parquet_files (1).ipynb
+++ b/read_parquet_files (1).ipynb
@@ -11808,6 +11808,25 @@
     "# To output an excel file, remove the # sign in the next line\n",
     "# dataset_encoded_2.to_excel('dataset_encoded_2.xlsx', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d85ea5d",
+   "metadata": {},
+   "source": [
+    "## Output the Final Dataframe after One Hot Encoding for further study "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2207d17e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in case you want to output the csv file, remove the # sign in the next line\n",
+    "# dataset_encoded_3.to_csv('Dataframe_Encoding.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
