ML multi single label DecisionTreeClassifier

--- a/6_1_ML_method.ipynb
+++ b/6_1_ML_method.ipynb
@@ -24,7 +24,8 @@
     "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "from sklearn.metrics import classification_report   "
+    "from sklearn.metrics import classification_report \n",
+    "from sklearn.feature_selection import SelectFromModel  "
    ]
   },
   {
@@ -37,15 +38,30 @@
     "\n",
     "    gridserachcv.fit(x_train, y_train)\n",
     "    best_params = gridserachcv.best_params_\n",
-    "    print(\"Best parameters for Logistic Regression: \", best_params)\n",
+    "    print(\"Best parameters: \", best_params)\n",
     "    print(\"Best F1 Score:\", gridserachcv.best_score_)\n",
     "    model1_best = gridserachcv.best_estimator_\n",
     "    model1_best = model1_best[1:] # remove the pipeline adasyn\n",
     "    print(\"run score\")\n",
     "    print(model1_best)\n",
+    "\n",
+    "    feature_df = get_feature_importance(model1_best,x_test.columns)\n",
+    "\n",
+    "    #SelectFromModel\n",
+    "    x_train_selected = x_train\n",
+    "    x_test_selected = x_test\n",
+    "    if hasattr(model1_best, \"feature_importances_\") or hasattr(model1_best, \"coef_\"):\n",
+    "        selector = SelectFromModel(model1_best, threshold='>0', prefit=True)\n",
+    "        x_train_selected = selector.transform(x_train)\n",
+    "        x_test_selected = selector.transform(x_test)\n",
+    "\n",
+    "    # x_train2 = x_train.drop(columns= list(feature_df[feature_df['Importance']==0]['Feature']))\n",
+    "    # x_test_selected = x_test.drop(columns= list(feature_df[feature_df['Importance']==0]['Feature']))\n",
+    "    model1_best.fit(x_train_selected, y_train)\n",
+    "\n",
     "    # model1_best.fit(columnsWithoutList(x_train,col_set_feature_engineering), y_train)\n",
-    "    rs_train = run_score_1(model1_best, 'train', x_train, y_train,True)\n",
-    "    rs_test =    run_score_1(model1_best, 'test', x_test, y_test,True)\n",
+    "    rs_train = run_score_1(model1_best, 'train', x_train_selected, y_train,True)\n",
+    "    rs_test =  run_score_1(model1_best, 'test', x_test_selected, y_test,True)\n",
     "    rs_train.accuracy_test = rs_test.accuracy\n",
     " \n",
     "    rs_train.accuracy_test = rs_test.accuracy\n",
@@ -60,7 +76,7 @@
     "\n",
     "\n",
     "\n",
-    "    get_feature_importance(model1_best,x_test.columns)\n",
+    "    \n",
     "    return rs_train\n",
     "    "
    ]
@@ -210,7 +226,8 @@
     "    else:\n",
     "        model = modelOrPipeline\n",
     "\n",
-    "    importances_df = pd.DataFrame()\n",
+    "    importances_df = pd.DataFrame(columns=['Feature','Importance'])\n",
+    "      \n",
     "    if hasattr(model, \"feature_importances_\"):\n",
     "        importances = model.feature_importances_\n",
     "\n",
