--- a/6_1_ML_method.ipynb
+++ b/6_1_ML_method.ipynb
@@ -34,6 +34,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def run_pipleline_score(pipline, x_train, y_train, x_test, y_test):\n",
+    "\n",
+    "    pipline.fit(x_train, y_train)\n",
+    "    print(\"run score\")\n",
+    "    model1_best = pipline[1:] # remove the pipeline adasyn\n",
+    "    # model1_best = pipline\n",
+    "\n",
+    "    #SelectFromModel\n",
+    "    x_train_selected = x_train\n",
+    "    x_test_selected = x_test\n",
+    "    # if hasattr(model1_best, \"feature_importances_\") or hasattr(model1_best, \"coef_\"):\n",
+    "    #     selector = SelectFromModel(model1_best, threshold='>0', prefit=True)\n",
+    "    #     x_train_selected = selector.transform(x_train)\n",
+    "    #     x_test_selected = selector.transform(x_test)\n",
+    "\n",
+    "    # x_train2 = x_train.drop(columns= list(feature_df[feature_df['Importance']==0]['Feature']))\n",
+    "    # x_test_selected = x_test.drop(columns= list(feature_df[feature_df['Importance']==0]['Feature']))\n",
+    "\n",
+    "\n",
+    "    # model1_best.fit(columnsWithoutList(x_train,col_set_feature_engineering), y_train)\n",
+    "    rs_train = run_score_1(model1_best, 'train', x_train_selected, y_train,True)\n",
+    "    rs_test =  run_score_1(model1_best, 'test', x_test_selected, y_test,True)\n",
+    "    rs_train.accuracy_test = rs_test.accuracy\n",
+    " \n",
+    "    rs_train.accuracy_test = rs_test.accuracy\n",
+    "    rs_train.roc_auc_test = rs_test.roc_auc\n",
+    "    rs_train.coh_kap_test = rs_test.coh_kap\n",
+    "    rs_train.f1_test = rs_test.f1\n",
+    "    rs_train.fper_test = rs_test.fper\n",
+    "    rs_train.tper_test = rs_test.tper\n",
+    "    rs_train.precision_test = rs_test.precision\n",
+    "    rs_train.recall_test = rs_test.recall\n",
+    "\n",
+    "    feature_df = get_feature_importance(model1_best,x_test.columns)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    return rs_train\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def run_pipleline_GridSearchCV(gridserachcv, x_train, y_train, x_test, y_test):\n",
     "\n",
     "    gridserachcv.fit(x_train, y_train)\n",
